main/default/objects/Ref_PDF_Element__c/Ref_PDF_Element__c.object-meta.xml
<CustomObject>
    <description>Configuration of an available PDF element.</description>
    <label>Ref PDF Element</label>
    <nameField>
        <label>Ref PDF Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ref PDF Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>