main/default/objects/Ref_PDF_Element__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>only active components are displayed for selection</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>