main/default/objects/Ref_PDF_Element__c/fields/Default_Selection__c.field-meta.xml
<CustomField>
    <fullName>Default_Selection__c</fullName>
    <label>Default Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unchecked</fullName>
                <default>true</default>
                <label>Unchecked</label>
            </value>
            <value>
                <fullName>Checked</fullName>
            </value>
            <value>
                <fullName>Auto-Included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>