main/default/objects/Ref_PDF_Element__c/fields/Display_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Display_Criteria__c</fullName>
    <label>Display Criteria</label>
    <type>TextArea</type>
</CustomField>