main/default/objects/Ref_PDF_Element__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <description>name to be displayed on the page for the user</description>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>