main/default/objects/Ref_PDF_Element__c/fields/Hide_When_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Hide_When_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide When Invalid</label>
    <type>Checkbox</type>
</CustomField>