main/default/objects/Ref_PDF_Element__c/fields/Parent_Element__c.field-meta.xml
<CustomField>
    <fullName>Parent_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Element</label>
    <referenceTo>Ref_PDF_Element__c</referenceTo>
    <relationshipLabel>Child Elements</relationshipLabel>
    <relationshipName>Child_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>