main/default/objects/Ref_PDF_Element__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal Sections</fullName>
            </value>
            <value>
                <fullName>Contract Sections</fullName>
            </value>
            <value>
                <fullName>Other Sections</fullName>
            </value>
            <value>
                <fullName>Indirect Sections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>