main/default/objects/Ref_PDF_Element__c/fields/Signature_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Signature_Grouping__c</fullName>
    <label>Signature Grouping</label>
    <length>30</length>
    <type>Text</type>
</CustomField>