main/default/objects/Ref_PDF_Element__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>Print_Order__c</columns>
    <columns>Section__c</columns>
    <columns>Signature_Grouping__c</columns>
    <columns>Add_Signature__c</columns>
    <columns>Display_Criteria__c</columns>
    <columns>Default_Selection__c</columns>
    <columns>Hide_When_Invalid__c</columns>
    <columns>Parent_Element__c</columns>
    <columns>Active__c</columns>
    <columns>Criteria_Help_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>